--- a/css/landing.css
+++ b/css/landing.css
@@ -1,6 +1,6 @@
 .banner {
     height: 100vh;
-    background: url("../assets/img/profile2Leo.JPG") no-repeat;
+    background: url("../assets/pierreImg/5.jpeg") no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
