--- a/css/landing.css
+++ b/css/landing.css
@@ -7,6 +7,17 @@
     align-items: flex-end;
 }
 
+.banner::before {
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: background-color 1s ease;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 .banner .text {
     text-align: center;
     padding-bottom: 120px;
