--- a/css/services.css
+++ b/css/services.css
@@ -42,15 +42,15 @@
 }
 
 .box-1 {
-    background-image: url('/assets/pierreImg/recordBackground.jpg');
+    background-image: url('https://i.imgur.com/tx2Ew5H.jpeg');
 }
 
 .box-2 {
-    background-image: url('/assets/pierreImg/mixingBackground.jpeg');
+    background-image: url('https://i.imgur.com/KJvY60B.jpeg');
 }
 
 .box-3 {
-    background-image: url('/assets/pierreImg/masteringBbackground.jpg');
+    background-image: url('https://i.imgur.com/S6bTrE1.jpeg');
 }
 
 @media (max-width: 576px) {
