--- a/css/popupModal.css
+++ b/css/popupModal.css
@@ -1,43 +1,39 @@
-/* Overlay that covers the rest of the page */
 .modal-overlay {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
-    z-index: 9998; /* Below the modal, but above everything else */
+    z-index: 9998;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Black with higher opacity */
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-/* Modal styles */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 9999; /* Ensure it's on top of the overlay */
+    display: none;
+    position: fixed;
+    z-index: 9999;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    overflow: hidden; /* Prevent scrolling within the modal */
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-/* Center the modal content */
 .modal-content {
     background-color: rgba(53, 51, 51, 1) !important;
-    padding: 6rem 20px; /* Adjust padding */
+    padding: 6rem 20px;
     padding-top: 4rem;
     border: 1px solid #888;
-    width: 80%; /* Adjust width according to content */
-    position: relative; /* Required for positioning the close button */
-    text-align: center; /* Center text */
-    overflow: visible; /* Enable scrolling within the modal content if needed */
-    max-height: 90%; /* Ensure content doesn't overflow outside the modal */
+    width: 80%;
+    position: relative;
+    text-align: center;
+    overflow: visible;
+    max-height: 90%;
 }
 
-/* Style the close button */
 .close {
     color: #aaa;
     position: absolute;
@@ -54,35 +50,31 @@
     cursor: pointer;
 }
 
-/* Icon row styling */
 .icon-row {
     padding-top: 3rem;
     display: flex;
-    justify-content: center; /* Center the icon items */
-    align-items: center; /* Align icon items vertically */
-    gap: 20px; /* Space between items */
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
-/* Individual icon and text item */
 .icon-item {
     color: white;
     text-align: center;
     margin: 10px;
     display: flex;
-    flex-direction: column; /* Stack icon above text */
-    align-items: center; /* Center items within */
+    flex-direction: column;
+    align-items: center;
 }
 
-/* Icon styling */
 .icon-item i {
     font-size: 2rem;
     color: white;
     margin-bottom: 10px;
 }
 
-/* Text under the icon */
 .icon-item p {
-padding-top: 2rem;
+    padding-top: 2rem;
     font-size: 1rem;
     color: #fff;
 }
