--- a/css/popupModal.css
+++ b/css/popupModal.css
@@ -23,7 +23,8 @@
 }
 
 .modal-content {
-    background-color: rgba(53, 51, 51, 1) !important;
+    background: url('https://i.imgur.com/tx2Ew5H.jpeg') no-repeat center center;
+    background-size: cover;
     box-shadow: 0 3px 6px rgba(255, 255, 255, 0.1) !important;
     padding: 6rem 20px;
     padding-top: 4rem;
@@ -33,6 +34,61 @@
     text-align: center;
     overflow: visible;
     max-height: 90%;
+    color: white; /* Ensures text is visible on the background */
+}
+
+#recordModal .modal-content {
+    background: url('https://i.imgur.com/tx2Ew5H.jpeg') no-repeat center center;
+    background-size: cover;
+}
+
+#recordModal .modal-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+    z-index: 1;
+}
+
+/* Mix Modal */
+#mixModal .modal-content {
+    background: url('https://i.imgur.com/KJvY60B.jpeg') no-repeat center center;
+    background-size: cover;
+}
+
+#mixModal .modal-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+    z-index: 1;
+}
+
+/* Master Modal */
+#masterModal .modal-content {
+    background: url('https://i.imgur.com/S6bTrE1.jpeg') no-repeat center center;
+    background-size: cover;
+}
+
+#masterModal .modal-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+    z-index: 1;
+}
+.modal-content > * {
+    position: relative;
+    z-index: 2; /* Ensure content is above the dark overlay */
 }
 
 .close {
