--- a/css/landing.css
+++ b/css/landing.css
@@ -28,6 +28,7 @@
 }
 
 .go-to-helper {
+    cursor: pointer!important;
     padding-top: 20px;
     text-align: center;
     padding-bottom: 50px;
@@ -76,6 +77,7 @@
     font-family: FontAwesome, sans-serif;
     content: "\f078";
     opacity: 0.33;
+    cursor: pointer;
 }
 
 .banner h1 {
