--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 body {
     color: #fff;
-    background-color: #000;
+    background-color: #1a1a1a;
     font-family: 'Space Grotesk', sans-serif;
 }
 
