--- a/css/footer.css
+++ b/css/footer.css
@@ -22,13 +22,13 @@ footer ul li {
 }
 footer ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     font-size: 14px;
 }
 
 footer ul li p {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     font-size: 14px;
 }
 
