--- a/css/imprint.css
+++ b/css/imprint.css
@@ -1,7 +1,7 @@
 .imprint {
-    background-color: #f9f9f9;
+    background-color: #000;
     padding: 20px;
-    color: #333;
+    color: #000;
     line-height: 1.6;
 }
 
