--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    color: #fff;
-    background-color: #1a1a1a;
+    color: #000;
+    background-color: rgba(240, 248, 255, 0.8);
     font-family: 'Space Grotesk', sans-serif;
 }
 
